--- a/src/index.html
+++ b/src/index.html
@@ -1,11 +1,23 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Angular QuickStart</title>
+    <title>Robot Trader</title>
     <base href="/">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <link rel="stylesheet" href="styles.css">
+
+      <!-- Styles -->
+  	<link rel="stylesheet" href="http://www.jqwidgets.com/public/jqwidgets/styles/jqx.base.css" type="text/css" />
+      <!-- jQWidgets -->
+  	<script src="http://www.jqwidgets.com/public/jqwidgets/jqxcore.js"></script>
+  	<script src="http://www.jqwidgets.com/public/jqwidgets/jqxdraw.js"></script>
+  	<script src="http://www.jqwidgets.com/public/jqwidgets/jqxbargauge.js"></script>
+  	<script src="http://www.jqwidgets.com/public/jqwidgets/jqxchart.js"></script>
+
+
+    <script type="text/javascript" src="https://www.gstatic.com/charts/loader.js"></script>
+
 
     <!-- Polyfill(s) for older browsers -->
     <script src="node_modules/core-js/client/shim.min.js"></script>
@@ -20,6 +32,6 @@
   </head>
 
   <body>
-    <app-root>Loading AppComponent content here ...</app-root>
+    <app-root>Loading your favorite content here!</app-root>
   </body>
 </html>
