Oh, now I remember what this does! Added comments to most functions

--- a/src/index.html
+++ b/src/index.html
@@ -16,6 +16,6 @@
   </head>
 
   <body>
-    <app-root>Loading your favorite content here!</app-root>
+    <app-root>Loading the application!</app-root>
   </body>
 </html>
